fix: broken page width on mobile when long code sequence

--- a/docs/src/styles/base.css
+++ b/docs/src/styles/base.css
@@ -59,7 +59,7 @@ article pre {
 }
 
 article code {
-  @apply bg-neutral-300;
+  @apply bg-neutral-300 break-words;
 }
 
 article pre code {
